# serializer version: 1
# name: test_ct_table_new_tbl
  '''
  <a:tbl xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <a:tblPr firstRow="1" bandRow="1">
      <a:tableStyleId>{5C22544A-7EE6-4342-B048-85BDC9FD1C3A}</a:tableStyleId>
    </a:tblPr>
    <a:tblGrid>
      <a:gridCol w="111"/>
      <a:gridCol w="111"/>
      <a:gridCol w="112"/>
    </a:tblGrid>
    <a:tr h="222">
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
        <a:tcPr/>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
        <a:tcPr/>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
        <a:tcPr/>
      </a:tc>
    </a:tr>
    <a:tr h="223">
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
        <a:tcPr/>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
        <a:tcPr/>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
        <a:tcPr/>
      </a:tc>
    </a:tr>
  </a:tbl>
  
  '''
# ---
# name: test_tc_range_move_content_to_origin[<a:tr><a:tc><a:txBody><a:bodyPr/><a:lstStyle/><a:p/></a:txBody></a:tc><a:tc><a:txBody><a:bodyPr/><a:lstStyle/><a:p><a:r><a:t>second</a:t></a:r></a:p></a:txBody></a:tc></a:tr>-second]
  '''
  <a:tbl xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <a:tr>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p>
            <a:r>
              <a:t>second</a:t>
            </a:r>
          </a:p>
        </a:txBody>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
    </a:tr>
  </a:tbl>
  
  '''
# ---
# name: test_tc_range_move_content_to_origin[<a:tr><a:tc><a:txBody><a:bodyPr/><a:lstStyle/><a:p><a:r><a:t>a</a:t></a:r></a:p></a:txBody></a:tc><a:tc><a:txBody><a:bodyPr/><a:lstStyle/><a:p><a:r><a:t>b</a:t></a:r></a:p></a:txBody></a:tc></a:tr>-a\nb]
  '''
  <a:tbl xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <a:tr>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p>
            <a:r>
              <a:t>a</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>b</a:t>
            </a:r>
          </a:p>
        </a:txBody>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
    </a:tr>
  </a:tbl>
  
  '''
# ---
